--- a/timecoco/Podfile
+++ b/timecoco/Podfile
@@ -1,3 +1,6 @@
-platform :ios, '7.0'
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '8.0'
+use_frameworks!
 
 pod 'FMDB'
+pod 'REFrostedViewController', '~> 2.4.7'
