--- a/timecoco/Podfile
+++ b/timecoco/Podfile
@@ -2,9 +2,9 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 use_frameworks!
 
+pod 'AsyncDisplayKit'
+pod 'DHSmartScreenshot'
 pod 'FMDB'
 pod 'REFrostedViewController', '~> 2.4.7'
-pod 'CHCSVParser'
-pod 'TTTAttributedLabel'
 pod 'SVProgressHUD'
-pod 'DHSmartScreenshot'
+pod 'TTTAttributedLabel'
