--- a/timecoco/Podfile
+++ b/timecoco/Podfile
@@ -1,6 +1,7 @@
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '8.0'
-use_frameworks!
+# Uncomment this line to define a global platform for your project
+# platform :ios, '7.0'
+
+target 'timecoco' do
 
 pod 'AsyncDisplayKit'
 pod 'DHSmartScreenshot'
@@ -8,3 +9,14 @@ pod 'FMDB'
 pod 'REFrostedViewController'
 pod 'SVProgressHUD'
 pod 'TTTAttributedLabel'
+
+end
+
+target 'timecocoTests' do
+
+end
+
+target 'extension' do
+
+end
+
